# knots-tui

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md
src/: main.rs  rpc.rs  service.rs  sys.rs  ui.rs  web.rs
src/ui/: analytics.rs  charts.rs  common.rs  dashboard.rs  ibd.rs  known_peers.rs  mod.rs  signaling.rs
web/: index.html
